Added PlayerDatabase
Added PlayerDatabase.
Currently in the process of switching random player generation to PlayerDatabase.
Cleaned up codebase.
TODO: Documentation, Test Cases.