@@ -14,8 +14,9 @@ public class MatchMaker {
         }
         return instance = new MatchMaker();
     }
-
     private static final double TICK = 5000; //Milliseconds
+    private static final int MATCH_POOL_SIZE = 20;
+
     private Map<GameMode, PriorityQueue<QueueTicket>> ticketQueues;
     public static Event tickEvent;
 
@@ -26,6 +27,7 @@ public class MatchMaker {
         }
         tickEvent = new Event();
     }
+
     public void start(){
         double startTime = System.currentTimeMillis();
         double currentTime;
@@ -37,6 +39,10 @@ public class MatchMaker {
             }
         }
     }
+    private void tick(){
+        System.out.println("Pulse");
+    }
+
     public void initializeSimulation(int numPlayersPerMode){
 
         for(GameMode mode : GameMode.values()){
@@ -49,40 +55,43 @@ public class MatchMaker {
                 Party party = new Party(mode);
                 int partySize = (int)(Math.random() * ((mode.getMaxTeamSize()) - 1)) + 1;
                 for(int i = 0 ; i < partySize && !players.isEmpty() ; i++){
-                    party.addPlayer(players.removeFirst());
+//                    party.addPlayer(players.removeFirst());
+                    party.addPlayer(players.remove(0));
                 }
                 party.readyParty();
             }
-            
-            System.out.println("Mode " + mode.name() + " Match: " + buildMatch(mode));
+
+            //DEBUG LOG MATCHES
+            System.out.println(mode.name() + " Match: \n\t" + buildMatch(mode));
+            //DEBUG LOG MATCHES
         }
-
-        // for(GameMode mode : GameMode.values()){
-        //     System.out.println("Queue for mode: " + mode);
-        //     PriorityQueue<QueueTicket> queue = ticketQueues.get(mode);
-        //     int i = 0;
-        //     while(!queue.isEmpty()){
-        //         System.out.println("" + i + queue.poll() + "\n");
-        //         i++;
-        //     }
-        // }
-
-        ArrayList<Team> validTeams = new ArrayList<>();
+    }
+    public synchronized void joinQueue(QueueTicket ticket){
+        PriorityQueue<QueueTicket> modeQueue = ticketQueues.get(ticket.getGameMode());
+        modeQueue.add(ticket);
     }
 
-    public ArrayList<Team> buildMatch(GameMode mode){
-        
-        ArrayList<Team> validTeams = new ArrayList<>();
+    //Gets the top MATCH_POOL_SIZE number of elements from the priority queue
+    public ArrayList<Party> buildMatchPool(GameMode mode){
         PriorityQueue<QueueTicket> queue = ticketQueues.get(mode);
 
         ArrayList<Party> partyPool = new ArrayList<>();
-        for(int i = 0 ; i < 20 && !queue.isEmpty() ; i++){
+        for(int i = 0 ; i < MATCH_POOL_SIZE && !queue.isEmpty() ; i++){
             partyPool.add(queue.poll().getParty());
         }
+        return partyPool;
+    }
+    public ArrayList<Team> buildMatch(GameMode mode){
 
-        buildTeam(mode.getMaxTeamSize(), partyPool, 0, new Team(), validTeams);
+        //Gets the top elements from the priority queue
+        ArrayList<Party> partyPool = buildMatchPool(mode);
+
+        //Builds a list of valid teams
+        ArrayList<Team> validTeams = new ArrayList<>();
+        buildValidTeams(mode.getMaxTeamSize(), partyPool, 0, new Team(), validTeams);
         validTeams.sort(Comparator.comparing(Team::getAvgTeamRating).reversed());
 
+        //Finds the team with the smallest difference in skill level
         Double minDiff = Double.MAX_VALUE;
         ArrayList<Team> result = new ArrayList<>();
 
@@ -106,18 +115,11 @@ public class MatchMaker {
         }
         validTeams.remove(result.get(0));
         validTeams.remove(result.get(1));
+
+        //Returns the Best Team
         return result;
     }
-    public synchronized void joinQueue(QueueTicket ticket){
-        PriorityQueue<QueueTicket> modeQueue = ticketQueues.get(ticket.getGameMode());
-        modeQueue.add(ticket);
-    }
-
-    private void tick(){
-        System.out.println("Pulse");
-    }
-
-    private void buildTeam(int requiredPlayers, ArrayList<Party> parties, int index, Team currentTeam, ArrayList<Team> validTeams){
+    private void buildValidTeams(int requiredPlayers, ArrayList<Party> parties, int index, Team currentTeam, ArrayList<Team> validTeams){
         //Base Case 1: Team size met
         if(requiredPlayers == 0){
             validTeams.add(currentTeam);
@@ -134,7 +136,22 @@ public class MatchMaker {
             Team team = new Team(currentTeam);
             team.addParty(currentParty);
 
-            buildTeam(requiredPlayers - currentParty.getPartySize(), parties, index + 1, team, validTeams);
+            buildValidTeams(requiredPlayers - currentParty.getPartySize(), parties, index + 1, team, validTeams);
         }
     }
+
+
+    //DEBUGGING METHODS
+    public void debugLogTickets(){
+         for(GameMode mode : GameMode.values()){
+             System.out.println("Queue for mode: " + mode);
+             PriorityQueue<QueueTicket> queue = ticketQueues.get(mode);
+             int i = 0;
+             while(!queue.isEmpty()){
+                 System.out.println("" + i + queue.poll() + "\n");
+                 i++;
+             }
+         }
+    }
+    //DEBUGGING METHODS
 }
